--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "at.bitfire.nophonespam"
+        applicationId 'com.eaglx.callblocker'
         minSdkVersion 19
         targetSdkVersion 29
 
