--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 29
 
-        versionCode 14
-        versionName "0.2.14"
+        versionCode 15
+        versionName "0.2.15"
     }
     buildTypes {
         release {
@@ -28,7 +28,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
 
     testImplementation 'junit:junit:4.12'
